fix bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ body {
 
     .container {
         height: 75vw;
-        width: 75vh;
+        width: 61vh;
         left: 45%;
         top: 48%;
     }
